# urm

./: .clang-format  .gitignore  CMakeLists.txt
.clangd/index/: fmt.hpp.E6B7783ED043B912.idx  main.cpp.C7504F51081F9032.idx  vml.hpp.D8B54834E151622D.idx
src/: fmt.hpp  main.cpp  prof.cpp  prof.hpp  vml.hpp
